[Realization] moved service extension point from m2doc.ui to m2doc
Change-Id: I8e815c3b92f9d4f8fc366cea9776d70f5ce90ab3
Signed-off-by: pguilet <pierre.guilet@obeo.fr>

--- a/plugins/org.obeonetwork.m2doc.ui/build.properties
+++ b/plugins/org.obeonetwork.m2doc.ui/build.properties
@@ -15,6 +15,5 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               plugin.properties,\
-               schema/
+               plugin.properties
 jre.compilation.profile = JavaSE-1.6
