--- a/plugins/org.obeonetwork.m2doc/plugin.xml
+++ b/plugins/org.obeonetwork.m2doc/plugin.xml
@@ -17,6 +17,7 @@
 -->
 
 <plugin>
+	<extension-point id="org.obeonetwork.m2doc.services.register" name="M2Doc Service Register" schema="schema/org.obeonetwork.m2doc.services.register.exsd"/>
    <extension-point id="org.obeonetwork.m2doc.providers.register" name="M2Doc Provider Register" schema="schema/org.obeonetwork.m2doc.providers.register.exsd"/>
 
    <extension point="org.eclipse.emf.ecore.generated_package">
